Made changes to CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Home Page</title>
 <link href="styleSheet.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <div class="topnav" id="myTopnav">
 
@@ -14,15 +15,15 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="overallStats">Overall</a>
-      <a href="agricultureStats">Agriculture</a>
-	  <a href="educationStats">Education</a>
-	  <a href="engineeringStats">Engineering, Manufacturing & Construction</a>
-	  <a href="healthStats">Health & Welfare</a>
-	  <a href="humanitiesStats">Humanities & Arts</a>
-	  <a href="scienceStats">Science</a>
-	  <a href="servicesStats">Services</a>
-	  <a href="socialStats">Social Sciences, Business & Law</a>
+      <a href="overallStats.html">Overall</a>
+      <a href="agricultureStats.html">Agriculture</a>
+	  <a href="educationStats.html">Education</a>
+	  <a href="engineeringStats.html">Engineering, Manufacturing & Construction</a>
+	  <a href="healthStats.html">Health & Welfare</a>
+	  <a href="humanitiesStats.html">Humanities & Arts</a>
+	  <a href="scienceStats.html">Science</a>
+	  <a href="servicesStats.html">Services</a>
+	  <a href="socialStats.html">Social Sciences, Business & Law</a>
     </div>
   </div> 
   <a href="opportunities.html">Opportunities</a>
@@ -30,21 +31,21 @@
 </div>
 
 <body>
+
+<div class = "row" style = "border: 2px solid #e0fbfc;">
 <div class="homepageSlides" style="max-width:600px">
 	<img class="slides" src="images/logo.jpg" style="width:100%">
   <img class="slides" src="images/uni_img1.jpg" style="width:100%">
   <img class="slides" src="images/uni_img2.jpg" style="width:100%">
   <img class="slides" src="images/uni_img3.jpg" style="width:100%">
-</div>
 
-  
 
-  
-<div class="row">
+
 <div class="col-12">
-<p>blah blah blah blah blah uni blah blah blah blah blah blah blah uni blah blah blah blah blah blah blah uni blah blah blah blah blah blah blah uni blah blah</p>
-  
+<p>Unfo is a tool to help you make an informed decision, our aim is to provide you with all of the resources you needs to pick your future all in one place, we have a list of all the Universities in the UK, with links you can visit to view their sites, we have statistics available as well as a search function so you will be able to see the types of jobs available from your chosen field of study</p>
 </div>
+  </div>
+  <div>
   
 <script>
 function navbar() {
