--- a/opportunities.html
+++ b/opportunities.html
@@ -5,6 +5,7 @@
 <title>Oppertunities</title>
 <link href="styleSheet.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <div class="topnav" id="myTopnav">
 
@@ -15,15 +16,15 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="overallStats">Overall</a>
-      <a href="agricultureStats">Agriculture</a>
-	  <a href="educationStats">Education</a>
-	  <a href="engineeringStats">Engineering, Manufacturing & Construction</a>
-	  <a href="healthStats">Health & Welfare</a>
-	  <a href="humanitiesStats">Humanities & Arts</a>
-	  <a href="scienceStats">Science</a>
-	  <a href="servicesStats">Services</a>
-	  <a href="socialStats">Social Sciences, Business & Law</a>
+      <a href="overallStats.html">Overall</a>
+      <a href="agricultureStats.html">Agriculture</a>
+	  <a href="educationStats.html">Education</a>
+	  <a href="engineeringStats.html">Engineering, Manufacturing & Construction</a>
+	  <a href="healthStats.html">Health & Welfare</a>
+	  <a href="humanitiesStats.html">Humanities & Arts</a>
+	  <a href="scienceStats.html">Science</a>
+	  <a href="servicesStats.html">Services</a>
+	  <a href="socialStats.html">Social Sciences, Business & Law</a>
     </div>
   </div> 
   <a href="opportunities.html">Opportunities</a>
